# tui_chat_app_client

./: Cargo.nix  Cargo.toml  flake.nix  theme.json
src/: api.rs  app.rs  auth_tui.rs  chat_tui.rs  client.rs  home_tui.rs  main.rs
src/chat_tui/: data.rs  events.rs  mod.rs  utils.rs  websocket.rs
