[package]
name = "tui_chat_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
tungstenite = { version = "0.27", default-features = false, features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
ratatui = "0.29"
argon2 = "0.5.3"
crossterm = "0.28.1"
chrono = "0.4.41"
directories = "6.0.0"
unicode-width = "0.2.0"


